<resources>
    <string name="app_name">Склад</string>
    <string name="login">Ник</string>
    <string name="pin">PIN</string>
    <string name="loginText">Войти</string>
    <string name="pinError">Не верный "НИК" или "PIN"</string>
    <string name="saveLoginCheckBox">Запомнить</string>
    <string name="inventory">Инвентаризация</string>
    <string name="moved">Перемещение</string>
    <string name="receipt">Поступление</string>
    <string name="write_off">Списание</string>
    <string name="menuLabel">Меню</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="User">Пользователь</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Домой</string>
    <string name="other">Прочее</string>
    <string name="exit">Выход</string>
</resources>