<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.atec.samuraiinventory.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.atec.samuraiinventory.ui.inventory.InventoryApp"
        android:label="@string/inventory"
        tools:layout="@layout/activity_inventory" />

    <fragment
        android:id="@+id/nav_moved"
        android:name="com.atec.samuraiinventory.ui.moved.MovedApp"
        android:label="@string/moved"
        tools:layout="@layout/activity_moved" />

    <fragment
        android:id="@+id/nav_receipt"
        android:name="com.atec.samuraiinventory.ui.receipt.ReceiptApp"
        android:label="@string/receipt"
        tools:layout="@layout/activity_receipt" />

    <fragment
        android:id="@+id/nav_write_off"
        android:name="com.atec.samuraiinventory.ui.writeoff.WriteOffApp"
        android:label="@string/write_off"
        tools:layout="@layout/activity_write_off" />
</navigation>