<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/inventoryButton"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:backgroundTint="@color/green"
            android:text="@string/inventory" />

        <Button
            android:id="@+id/movedButton"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:backgroundTint="@color/blue"
            android:text="@string/moved" />

        <Button
            android:id="@+id/receiptButton"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:backgroundTint="@color/lilac"
            android:text="@string/receipt" />

        <Button
            android:id="@+id/writeOffButton"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:backgroundTint="@color/red2"
            android:text="@string/write_off" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>